--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.6",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "22.13.5",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "autoprefixer": "10.4.20",
+    "chart.js": "^4.4.9",
     "eslint": "9.21.0",
     "eslint-config-next": "15.1.7",
-    "next": "15.1.7",
-    "postcss": "8.5.3",
+    "framer-motion": "^12.4.7",
+    "js-cookie": "^3.0.5",
+    "next": "^15.3.0",
+    "next-app": "file:",
+    "postcss": "^8.5.3",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "4.0.9",
+    "tailwindcss": "^4.0.9",
     "typescript": "5.7.3"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
