--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.6",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.0-alpha.35",
     "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "22.13.5",
@@ -21,7 +21,8 @@
     "eslint-config-next": "15.1.7",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
-    "next": "^15.3.0",
+    "lightningcss-linux-x64-gnu": "^1.30.1",
+    "next": "^15.3.2",
     "next-app": "file:",
     "postcss": "^8.5.3",
     "react": "19.0.0",
@@ -31,6 +32,7 @@
     "typescript": "5.7.3"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6"
+    "@types/js-cookie": "^3.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.32.1"
   }
 }
