--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "tailwindcss": "^4.0.9",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "web-vitals": "^5.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
