--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "chart.js": "^4.4.9",
     "eslint": "9.21.0",
     "eslint-config-next": "15.1.7",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
     "lightningcss-linux-x64-gnu": "^1.30.1",
     "next": "^15.3.2",
@@ -28,6 +28,7 @@
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.0.9",
     "typescript": "5.7.3",
     "web-vitals": "^5.0.1"
