--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "22.13.5",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.20",
     "chart.js": "^4.4.9",
     "eslint": "9.21.0",
